--- a/website/index.html
+++ b/website/index.html
@@ -5,9 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="p💩💩picorn is your best friend if you want to skip fake news on Facebook or any other social media sites">
-    <meta name="keywords" content="funny, extension, fake news, fake, poopicorn, search, browser">
-    <meta name="author" content="THE TEAMBUTBETTER">
-    <title>poopicorn - watch out for sh*tty news</title>
+    <meta name="keywords" content="funny, extension, fake news, fake, poopicorn, search, browser, AI, hackathon, global, artificial, intelligence">
+    <meta name="author" content="THE TEAM BUT BETTER">
+
+    <!-- Facebook meta tags -->
+    <meta property="og:url" content="http://poopicorn.press" />
+    <meta property="og:type" />
+    <meta property="og:title" content="Skip fake news, poop on them with a unicorn" />
+    <meta property="og:description" content="p💩💩picorn is your best friend if you want to skip fake news on any other social media sites" />
+    <meta property="og:image" content="http://poopicorn.press/img/facebook_og_poopicorn.png" />
+    <!-- End of Facebook meta tags  -->
+
+    <!-- Twitter meta tags -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@javpet" />
+    <meta name="twitter:creator" content="@javpet" />
+    <!-- End of Twitter meta tags  -->
+
+    <title>poopicorn - watch out for sh*tty news, check for poops!</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -19,19 +34,56 @@
            	<a href="index.html"><img src="img/poopicorn_logo.svg"></a>
           </h1>
           <nav>
-             <a href="#how we poop">How we poop?</a>
-             <a href="#team">Team</a>
-             <a href="#contact">Contact</a>
+             <a class="smoothScroll" href="#multiplatform">Download Multi Platform Extension</a>
+             <a class="smoothScroll" href="#howwepoop">How we poop?</a>
+             <a class="smoothScroll" href="#dashboard">Dashboard</a>
+             <a class="smoothScroll" href="#team">Team</a>
+             <a class="smoothScroll" href="http://twitter.com/home?status=Poopicorn%20is%20awesome%2C%20helping%20me%20to%20filter%20out%20%F0%9F%92%A9%20news%20on%20Facebook.%20Check%20it%20out!%20poopicorn.press" target=”_blank”>Share</a>
           </nav>
        </header>
-       <section class="main-section">
-         Here goes the big headline and the unicorn
+       <section id="multiplatform" class="main-section smoothScroll">
+         <img src="img/poopicorn_logo_2.svg" alt="Illustration of a lovely unicorn which is pooping rainbow">
+         <div class="headliners">
+           <h2>Watch out for sh*t!</h2>
+           <p>Have you ever become frustrated by your inability to tell if the content (articles, tweets, facebook posts, etc.) you are reading on the internet is actually real? With so many voices contributing to the vast quantity of content available on the internet, how do we know which sources we should trust, and which to dismiss? This where poopicorn comes in to poop.<br><a href="#">Download Multi-platform plugin</a></p>
+         </div>
       </section>
-      <section>
-        How it works and demo video
+      <section class="video-section">
+        <div id="howwepoop" class="description">
+           <h2>How we poop?</h2>
+           <p>To find out if the content you are currently viewing is shitty or not, we have modelled articles from known fake and real news sources. Using state-of-the-art LSTM neural networks with an attention mechanism, we have developed a plugin that is able to detect what you are reading is good shirt or, well, just shit.</p>
+        </div>
+        <div class="youtube">
+          <img src="img/Placeholder.png" alt="">
+        </div>
+        <div class="dashboard">
+          <img src="img/dashboard_poopicorn.png" alt="The poopicorn dashboard">
+        </div>
+        <div id="dashboard" class="description">
+           <h2>Dashboard</h2>
+           <p>The dashboard gives a quick overview of the recent incoming poop-check requests, the top 5 viral content's credibility and also giving some poopscores for the recurrning popular websites, based on their truthy / falsy news.</p>
+        </div>
      </section>
-     <section>
-       The team structure
+     <section class="team-section">
+       <div id="team" class="team">
+         <h2>The Team But Better</h2>
+       </div>
+       <div class="faces">
+         <img src="img/daniel_profile.jpg" alt="Daniel profile picture">
+         <img src="img/kike_profile.jpg" alt="Kike profile picture">
+         <img src="img/paul_profile.jpg" alt="Paul profile picture">
+         <img src="img/peterjavorkai.jpg" alt="Peter profile picture">
+         <img src="img/warwick_profile.jpg" alt="Warwick profile picture">
+         <img src="img/cornelis_profile.jpg" alt="Cornelis profile picture">
+         <img src="img/simon_profile.jpg" alt="Simon profile picture">
+         <img src="img/profile_sample.png" alt="Poopicorn is part of the team">
+       </div>
     </section>
+    <footer>
+      <p>Copyright 2017</p>
+      <p>Made with smart 💩 in Amsterdam @Global AI Hackathon, by people who likes data</p>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
