--- a/website/index.html
+++ b/website/index.html
@@ -54,7 +54,7 @@
            <p>To find out if the content you are currently viewing is shitty or not, we have modelled articles from known fake and real news sources. Using state-of-the-art LSTM neural networks with an attention mechanism, we have developed a plugin that is able to detect what you are reading is good shirt or, well, just shit.</p>
         </div>
         <div class="youtube">
-          <img src="img/Placeholder.png" alt="">
+          <img src="img/poop-o-meter.png" alt="Poop-o-meter shows which news to avoid because it's just poop">
         </div>
         <div class="dashboard">
           <img src="img/dashboard_poopicorn.png" alt="The poopicorn dashboard">
@@ -77,6 +77,9 @@
          <img src="img/cornelis_profile.jpg" alt="Cornelis profile picture">
          <img src="img/simon_profile.jpg" alt="Simon profile picture">
          <img src="img/profile_sample.png" alt="Poopicorn is part of the team">
+       </div>
+       <div class="team-photo">
+         <img src="img/team_photo.jpg" alt="Full The Team But Better">
        </div>
     </section>
     <footer>
