--- a/extension/poopycorn/popup/poopy.html
+++ b/extension/poopycorn/popup/poopy.html
@@ -6,8 +6,11 @@
     <link rel="stylesheet" href="poopy.css"/>
   </head>
 
-<body>
-  <div class="button activate">Activate</div>
+<body style="width: 140px;">
+  <h1>Watch out for sh*t!</h1>
+  <img src="./unicorn.png" style="width: 100px;"></img>
+  <p>Detected <strong>9999 fake news</strong> this week.</p>
+  <div class="button activate">Activate Poopicorn</div>
   <script src="poopyExt.js"></script>
 </body>
 
