Updated plugin design

--- a/extension/poopycorn/popup/poopy.html
+++ b/extension/poopycorn/popup/poopy.html
@@ -3,13 +3,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="poopy.css"/>
   </head>
 
 <body style="width: 140px;">
-  <h1>Watch out for sh*t!</h1>
-  <img src="./unicorn.png" style="width: 100px;"></img>
-  <p>Detected <strong>9999 fake news</strong> this week.</p>
+  <h1>Watch out for sh<span class="pink">*</span>t!</h1>
+  <img src="poopicorn_logo_2.svg"></img>
+  <p>Detected <span class="bold">9999 fake news</span> this week.</p>
   <div class="button activate">Activate Poopicorn</div>
   <script src="poopyExt.js"></script>
 </body>
