--- a/extension/poopicorn/popup/poopi.html
+++ b/extension/poopicorn/popup/poopi.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="poopy.css"/>
+    <link rel="stylesheet" href="poopi.css"/>
   </head>
 
 <body style="width: 140px;">
@@ -12,7 +12,7 @@
   <img src="poopicorn_logo_2.svg"></img>
   <p>Detected <span class="bold">9999 fake news</span> this week.</p>
   <div class="button activate">Activate Poopicorn</div>
-  <script src="poopyExt.js"></script>
+  <script src="poopiExt.js"></script>
 </body>
 
 </html>
