added container + links

--- a/website/index.html
+++ b/website/index.html
@@ -51,7 +51,7 @@
       <section class="video-section">
         <div id="howwepoop" class="description">
            <h2>How we poop?</h2>
-           <p>To find out if the content you are currently viewing is shitty or not, we have modelled articles from known fake and real news sources. Using state-of-the-art LSTM neural networks with an attention mechanism, we have developed a plugin that is able to detect what you are reading is good shirt or, well, just shit.</p>
+           <p>To find out if the content you are currently viewing is shitty or not, we have modelled articles from known fake and real news sources. Using state-of-the-art LSTM neural networks with an attention mechanism, we have developed a plugin that is able to detect what you are reading is good shit or, well, just shit.</p>
         </div>
         <div class="youtube">
           <img src="img/poop-o-meter.png" alt="Poop-o-meter shows which news to avoid because it's just poop">
