--- a/website/index.html
+++ b/website/index.html
@@ -27,6 +27,18 @@
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/favicon_poopicorn.png" type="image/x-icon">
+
+    <!-- Google Analytics Code -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-102643511-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </head>
   <body>
       <header>
@@ -51,7 +63,7 @@
       <section class="video-section">
         <div id="howwepoop" class="description">
            <h2>How we poop?</h2>
-           <p>To find out if the content you are currently viewing is shitty or not, we have modelled articles from known fake and real news sources. Using state-of-the-art LSTM neural networks with an attention mechanism, we have developed a plugin that is able to detect what you are reading is good shit or, well, just shit.</p>
+           <p>To find out if the content you are currently viewing is shitty or not, we have modelled articles from known fake and real news sources. Using state-of-the-art LSTM neural networks with an attention mechanism, we have developed a plugin that is able to detect what you are reading is good shirt or, well, just shit.</p>
         </div>
         <div class="youtube">
           <img src="img/poop-o-meter.png" alt="Poop-o-meter shows which news to avoid because it's just poop">
